Bump dependencies - sonar forbedringer (#2528)
* Bump fp-bom from 0.4.6 to 0.5.0

Bumps [fp-bom](https://github.com/navikt/fp-bom) from 0.4.6 to 0.5.0.
- [Release notes](https://github.com/navikt/fp-bom/releases)
- [Commits](https://github.com/navikt/fp-bom/compare/0.4.6...0.5.0)

---
updated-dependencies:
- dependency-name: no.nav.foreldrepenger.felles:fp-bom
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump fpkontrakter.version from 6.2.14 to 6.2.15

Bumps `fpkontrakter.version` from 6.2.14 to 6.2.15.

Updates `fordel-v1` from 6.2.14 to 6.2.15
- [Release notes](https://github.com/navikt/fp-kontrakter/releases)
- [Commits](https://github.com/navikt/fp-kontrakter/compare/6.2.14...6.2.15)

Updates `fp-topics-behandlingsprosess` from 6.2.14 to 6.2.15
- [Release notes](https://github.com/navikt/fp-kontrakter/releases)
- [Commits](https://github.com/navikt/fp-kontrakter/compare/6.2.14...6.2.15)

Updates `fp-ws-proxy-v1` from 6.2.14 to 6.2.15
- [Release notes](https://github.com/navikt/fp-kontrakter/releases)
- [Commits](https://github.com/navikt/fp-kontrakter/compare/6.2.14...6.2.15)

Updates `hendelser-behandling` from 6.2.14 to 6.2.15
- [Release notes](https://github.com/navikt/fp-kontrakter/releases)
- [Commits](https://github.com/navikt/fp-kontrakter/compare/6.2.14...6.2.15)

---
updated-dependencies:
- dependency-name: no.nav.foreldrepenger.kontrakter:fordel-v1
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: no.nav.foreldrepenger.kontrakter.topics:fp-topics-behandlingsprosess
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: no.nav.foreldrepenger.kontrakter:fp-ws-proxy-v1
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: no.nav.foreldrepenger.kontrakter.topics:hendelser-behandling